tests/error/type_errors/call_not_function.py
from tests.error.util import guppy


@guppy
def foo(x: int) -> int:
    x(42)
    return 0
